Updating my profile

--- a/index.html
+++ b/index.html
@@ -34,8 +34,6 @@
                         <li class="nav__item"><a href="#exp" class="nav__link active">Experience</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
-                        
-                        <li class="nav__item"><a href="https://sites.google.com/view/isayacapstoneproject/home" class="nav__link">Capstone</a></li>
                     </ul>
                 </div>
 
@@ -49,7 +47,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Isaya Onyango Opiyo</span> <br/>Mobile App Developer
+                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Isaya Onyango Opiyo</span> <br/>Data Analyst
                         </h1>
                         <h1 class="home__title-color"></h1>
 
