--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img ">
-                        <img src="myassets/img/isa.JPG" alt="">
+                        <img src="myassets/img/isaya.jpg" alt="">
                     </div>
                     
                     <div>
