commenting out work

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             </section>
 
             
-            <!--===== WORK =====-->
+            <!--===== WORK =====
             <section class="work section" id="work">
                 <h2 class="section-title">Work</h2>
 
@@ -242,7 +242,7 @@
                         <p style="text-align: center;">Notes App</p>
                     </a>
                 </div>
-            </section>
+            </section> -->
 
             <!--===== CONTACT =====-->
             <section class="ftco-section" id="contact">
