--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                                         <span class="fa fa-paper-plane"></span>
                                     </div>
                                     <div class="text">
-                                    <p><span>Email:</span> <a href="mailto:info@yoursite.com">isayaopiyo0@gmail.com</a></p>
+                                    <p><span>Email:</span> <a href="mailto:info@yoursite.com">isayahopiyo807@gmail.com</a></p>
                                   </div>
                               </div>
                                     </div>
