--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
             <!--===== SKILLS =====-->
             <section class="skills section" id="skills">
                 <h2 class="section-title">Skills</h2>
-
-                <div class="skills__container bd-grid">          
+        
                     <div class="skills__container bd-grid">
                         <h2 class="skills__subtitle">Profesional Skills</h2>
                         <div class="skills__data">
@@ -94,32 +93,32 @@
                                 <i class='bx bxs-spreadsheet skills__icon'></i>
                                 <span class="skills__name">Microsoft Excel</span>
                             </div>
-                            <div class="skills__bar skills__html"></div>
-                            <div><span class="skills__percentage">87%</span></div>
+                           <!-- <div class="skills__bar skills__html"></div>
+                            <div><span class="skills__percentage">87%</span></div>-->
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxs-bar-chart-alt-2 skills__icon'></i>
                                 <span class="skills__name">Power BI</span>
                             </div>
-                            <div class="skills__bar skills__css"></div>
-                            <div><span class="skills__percentage">83%</span></div>
+                           <!-- <div class="skills__bar skills__css"></div>
+                            <div><span class="skills__percentage">83%</span></div>-->
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-python skills__icon'></i>
                                 <span class="skills__name">Python</span>
                             </div>
-                            <div class="skills__bar skills__js"></div>
-                            <div><span class="skills__percentage">65%</span></div>
+                           <!-- <div class="skills__bar skills__js"></div>
+                            <div><span class="skills__percentage">65%</span></div>-->
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxs-data skills__icon'></i>
                                 <span class="skills__name">MySQL</span>
                             </div>
-                            <div class="skills__bar skills__js"></div>
-                            <div><span class="skills__percentage">78%</span></div>
+                           <!-- <div class="skills__bar skills__js"></div>
+                            <div><span class="skills__percentage">78%</span></div>-->
                         </div>
                     </div>
             </section>
