--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxs-spreadsheet skills__icon'></i>
-                                <span class="skills__name">Microsoft Excel</span>
+                                <span class="skills__name">Ms Excel</span>
                             </div>
                            <!-- <div class="skills__bar skills__html"></div>
                             <div><span class="skills__percentage">87%</span></div>-->
