--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
                         <img src="myassets/img/octobercedar.png" alt="Sales Analysis Dashboard">
                         <p class="project-title">Sales Analysis Dashboard</p>
                     </a>
-                    <a href="" class="project-card">
-                        <img src="myassets/img/notesapp.jpeg" alt="Mobile App">
-                        <p class="project-title">Mobile App</p>
+                    <a href="https://pnp.github.io/blog/post/onedrive-vs-sharepoint-how-to-always-know-where-to-save-your-files-in-microsoft-365/" class="project-card">
+                        <img src="myassets/img/notesapp.jpeg" alt="OneDrive vs SharePoint">
+                        <p class="project-title">OneDrive vs SharePoint</p>
                     </a>
                 </div>
             </section>
