--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 			            
 			            <div class="award-image">
 			                <!-- Add your award image below -->
-			                <img src="myassets/img/employee-q4-2025.jpg" alt="Employee of Q4 2025 Award - Rentokil Initial">
+			                <img src="myassets/img/award.jpeg" alt="Employee of Q4 2025 Award - Rentokil Initial">
 			            </div>
 			
 			            <div class="award-content">
