--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
 			        <div class="award-card" data-aos="fade-up" data-aos-delay="100">
 			            
 			            <div class="award-image">
-			                <!-- Add your award image below -->
-			                <img src="myassets/img/award.jpeg" alt="Employee of Q4 2025 Award - Rentokil Initial">
+			                <img src="myassets/img/award.jpeg" alt="Employee of Q4 2025 Award">
 			            </div>
 			
 			            <div class="award-content">
