--- a/index.html
+++ b/index.html
@@ -134,47 +134,59 @@
             </div>
         </section>
 
-        <section class="awards section" id="awards">
-            <h2 class="section-title">Awards & Recognition</h2>
-            <div class="awards__container bd-grid">
-                <div class="award__card">
-                    <div class="award__content">
-                        <h3 class="award__title">Employee of the Quarter – Q4 2025</h3>
-                        <p class="award__company">Rentokil Initial</p>
-                        <p class="award__text">Recognized for outstanding performance in reporting and data analysis during Q4 2025. Successfully assumed managerial reporting responsibilities, ensuring continuity under challenging circumstances.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+	        <section class="awards section" id="awards">
+			    <h2 class="section-title">Awards & Recognition</h2>
+			    <div class="awards__container bd-grid">
+			        <div class="award__card">
+			            <div class="award__img">
+			                <img src="myassets/img/award.jpeg" alt="Employee of the Quarter Award">
+			            </div>
+			            
+			            <div class="award__content">
+			                <h3 class="award__title">Employee of the Quarter – Q4 2025</h3>
+			                <p class="award__company">Rentokil Initial</p>
+			                <p class="award__text">
+			                    Recognized for outstanding performance in reporting and data analysis during Q4 2025. 
+			                    Successfully assumed managerial reporting responsibilities, ensuring continuity under 
+			                    challenging circumstances.
+			                </p>
+			            </div>
+			        </div>
+			    </div>
+			</section>
 
-        <section class="projects section" id="work">
-            <h2 class="section-title">Projects & Contributions</h2>
-            <div class="projects__container bd-grid swiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <a href="https://github.com/Isayah-19/HR-Performance-Dashboard" class="project__card">
-                            <img src="myassets/img/hrdashboard.png" alt="HR Dashboard">
-                            <span class="project__title">HR Dashboard</span>
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="https://github.com/Isayah-19/Sales-and-Profit-Dashboard" class="project__card">
-                            <img src="myassets/img/octobercedar.png" alt="Sales Analysis">
-                            <span class="project__title">Sales Analysis Dashboard</span>
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="https://pnp.github.io/blog/post/onedrive-vs-sharepoint-how-to-always-know-where-to-save-your-files-in-microsoft-365/" class="project__card">
-                            <img src="myassets/img/onedrive.jpg" alt="OneDrive vs SharePoint">
-                            <span class="project__title">OneDrive vs SharePoint Blog</span>
-                        </a>
-                    </div>
-                </div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
-            </div>
-        </section>
+			<section class="projects section" id="work">
+			    <h2 class="section-title">Projects & Contributions</h2>
+			
+			    <div class="projects__container swiper">
+			        <div class="swiper-wrapper">
+			            <div class="swiper-slide">
+			                <a href="https://github.com/Isayah-19/HR-Performance-Dashboard" class="project__card">
+			                    <img src="myassets/img/hrdashboard.png" alt="HR Dashboard">
+			                    <span class="project__title">HR Dashboard</span>
+			                </a>
+			            </div>
+			
+			            <div class="swiper-slide">
+			                <a href="https://github.com/Isayah-19/Sales-and-Profit-Dashboard" class="project__card">
+			                    <img src="myassets/img/octobercedar.png" alt="Sales Analysis">
+			                    <span class="project__title">Sales Analysis Dashboard</span>
+			                </a>
+			            </div>
+			
+			            <div class="swiper-slide">
+			                <a href="https://pnp.github.io/blog/post/onedrive-vs-sharepoint-how-to-always-know-where-to-save-your-files-in-microsoft-365/" class="project__card">
+			                    <img src="myassets/img/onedrive.jpg" alt="OneDrive vs SharePoint">
+			                    <span class="project__title">OneDrive vs SharePoint</span>
+			                </a>
+			            </div>
+			        </div>
+			
+			        <div class="swiper-button-next"></div>
+			        <div class="swiper-button-prev"></div>
+			        <div class="swiper-pagination"></div>
+			    </div>
+			</section>
         <section class="contact section" id="contact">
             <h2 class="section-title">Contact Me</h2>
             <div class="contact__container bd-grid">
