--- a/index.html
+++ b/index.html
@@ -64,26 +64,34 @@
         </section>
 
         <section class="skills section" id="skills">
-            <h2 class="section-title">Skills</h2>
-            <div class="skills__container bd-grid">
-                <div class="skills__data">
-                    <i class='bx bxs-spreadsheet skills__icon'></i>
-                    <span class="skills__name">MS Excel</span>
-                </div>
-                <div class="skills__data">
-                    <i class='bx bxs-bar-chart-alt-2 skills__icon'></i>
-                    <span class="skills__name">Power BI</span>
-                </div>
-                <div class="skills__data">
-                    <i class='bx bxl-python skills__icon'></i>
-                    <span class="skills__name">Python</span>
-                </div>
-                <div class="skills__data">
-                    <i class='bx bxs-data skills__icon'></i>
-                    <span class="skills__name">MySQL</span>
-                </div>
-            </div>
-        </section>
+		    <h2 class="section-title">Skills</h2>
+		    <div class="skills__container bd-grid">
+		        <div class="skills__data">
+		            <i class='bx bxs-spreadsheet skills__icon'></i>
+		            <span class="skills__name">MS Excel</span>
+		        </div>
+		        <div class="skills__data">
+		            <i class='bx bxs-bar-chart-alt-2 skills__icon'></i>
+		            <span class="skills__name">Power BI</span>
+		        </div>
+		        <div class="skills__data">
+		            <i class='bx bxl-python skills__icon'></i>
+		            <span class="skills__name">Python</span>
+		        </div>
+		        <div class="skills__data">
+		            <i class='bx bxs-data skills__icon'></i>
+		            <span class="skills__name">MySQL</span>
+		        </div>
+		        <div class="skills__data">
+		            <i class='bx bx-cog skills__icon'></i>
+		            <span class="skills__name">Business Central</span>
+		        </div>
+				<div class="skills__data">
+		            <i class='bx bxs-bar-chart-alt-2 skills__icon'></i>
+		            <span class="skills__name">Looker Studio</span>
+		        </div>
+		    </div>
+		</section>
 
         <section class="certifications section" id="certifications">
             <h2 class="section-title">Certifications</h2>
